--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Covid</string>
     <string name="top_bar">COVID-19 Statistics</string>
+    <string name="cases">Cases</string>
+    <string name="deaths">Deaths</string>
 </resources>
